# openswmm.engine

./: .gitignore  AUTHORS.md  CHANGELOG.md  CLA.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  vcpkg-configuration.json  vcpkg.json
pyopenswmmcore/openswmmcore/: CMakeLists.txt  __init__.py  _epaswmm.pyx
pyopenswmmcore/openswmmcore/output/: CMakeLists.txt  output.pxd
pyopenswmmcore/openswmmcore/solver/: CMakeLists.txt  _solver.pyx  solver.pxd
python/: CMakeLists.txt  CMakePresets.json  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  smoke_test.py
python/cmake/: CythonHelpers.cmake  PatchNumpyPxd.cmake
python/docs/: LEGACY_API_EXPANSION_PLAN.md  api.rst  conf.py  environment.yml  index.rst  license.rst  requirements.txt
python/docs/_static/: openswmm.css
python/docs/guide/: concepts.rst  controls.rst  editing.rst  error_handling.rst  forcing.rst  gages.rst  hotstart.rst  index.rst  inflows.rst  infrastructure.rst  install.rst  links.rst  massbalance.rst  model_builder.rst  nodes.rst  output_reader.rst  pollutants.rst  quality.rst  quickstart.rst  solver.rst  spatial.rst  statistics.rst  subcatchments.rst  tables.rst
python/docs/legacy/: index.rst  output.rst  solver.rst
python/docs/migration/: swmm5_to_swmm6.rst
python/epaswmm/: __init__.py
python/epaswmm/output/: _output.pyi  _output.pyx
python/epaswmm/solver/: _solver.pyx  solver.pxd
python/openswmm/: CMakeLists.txt  __init__.py  _openswmm.pyx  openswmm.pxd
python/openswmm/engine/: CMakeLists.txt  _2d.pxd  _2d.pyi  _2d.pyx  __init__.pxd  __init__.py  __init__.pyi  _common.pxd  _controls.pyi  _controls.pyx  _dates.py  _dates.pyi  _edit.pyi  _edit.pyx  _enums.py  _enums.pyi  _forcing.pyi  _forcing.pyx  _gages.pyi  _gages.pyx  _geopackage.pyi  _geopackage.pyx  _hotstart.pyi  _hotstart.pyx  _inflows.pyi  _inflows.pyx  _infrastructure.pyi  _infrastructure.pyx  _links.pyi  _links.pyx  _massbalance.pyi  _massbalance.pyx  _model.pyi  _model.pyx  _nodes.pyi  _nodes.pyx  _output_reader.pyi  _output_reader.pyx  _pollutants.pyi  _pollutants.pyx  (+13 more)
python/openswmm/legacy/: CMakeLists.txt  __init__.py
python/openswmm/output/: CMakeLists.txt  __init__.py  _output.pyi  _output.pyx
python/openswmm/solver/: CMakeLists.txt  __init__.py  _solver.pyi  _solver.pyx
python/openswmm_src/: CMakeLists.txt
python/openswmm_src/engine/: _hotstart.pyi  _nodes.pyx  _solver.pyx  _tables.pyx
python/scripts/: clean.sh  repair_wheel_windows.py
python/tests/: conftest.py  test_swmm_solver.py  test_swwm_output.py
python/tests/engine/: __init__.py  conftest.py  test_controls_inflows.py  test_edit.py  test_enums.py  test_gages.py  test_gages_expanded.py  test_geopackage.py  test_hotstart.py  test_infrastructure.py  test_integration.py  test_links.py  test_links_expanded.py  test_massbalance.py  test_massbalance_expanded.py  test_model_builder.py  test_new_api.py  test_new_modules.py  test_nodes.py  test_nodes_expanded.py  test_opened_state_editing.py  test_output_reader.py  test_quality_pollutants.py  test_solver.py  test_spatial.py  test_subcatchments.py  test_subcatchments_expanded.py  test_tables.py  test_workflow.py
python/tests/legacy/: __init__.py  test_output.py  test_phase1_enum_coverage.py  test_phase2_statistics.py  test_phase3_oop_wrappers.py  test_solver.py
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.c  main.cpp
src/engine/: CMakeLists.txt
src/engine/2d/: SurfaceRouter2D.cpp  SurfaceRouter2D.hpp
src/engine/controls/: Controls.cpp  Controls.hpp
src/engine/core/: Constants.hpp  DateTime.hpp  ErrorCodes.cpp  ErrorCodes.hpp  HotStartManager.cpp  HotStartManager.hpp  InpWriter.cpp  InpWriter.hpp  InterfaceFile.cpp  InterfaceFile.hpp  OperatorSnapshotState.hpp  SWMMEngine.cpp  SWMMEngine.hpp  SimulationContext.hpp  SimulationOptions.hpp  SpatialFrame.hpp  TypeHelpers.hpp  UnitConversion.cpp  UnitConversion.hpp  UserFlags.hpp  charconv_compat.hpp  openswmm_api_common.hpp  openswmm_controls_impl.cpp  openswmm_edit_impl.cpp  openswmm_engine_impl.cpp  openswmm_forcing_impl.cpp  openswmm_gages_impl.cpp  openswmm_hotstart_impl.cpp  openswmm_inflows_impl.cpp  openswmm_infrastructure_impl.cpp  openswmm_links_impl.cpp  openswmm_massbalance_impl.cpp  openswmm_model_impl.cpp  openswmm_nodes_impl.cpp  openswmm_pollutants_impl.cpp  openswmm_quality_impl.cpp  openswmm_spatial_impl.cpp  openswmm_statistics_impl.cpp  openswmm_subcatchments_impl.cpp  openswmm_tables_impl.cpp
src/engine/data/: ForcingData.hpp  GageData.hpp  HydrologyData.hpp  InflowData.hpp  InfraData.hpp  LinkData.hpp  NameIndex.hpp  NodeData.hpp  PollutantData.hpp  QualityData.hpp  SubcatchData.hpp  TableData.cpp  TableData.hpp
src/engine/edit/: ObjectDeleter.cpp  ObjectDeleter.hpp  TypeConverter.cpp  TypeConverter.hpp
src/engine/hydraulics/: Culvert.cpp  Culvert.hpp  Divider.cpp  Divider.hpp  DynamicWave.cpp  DynamicWave.hpp  Exfiltration.cpp  Exfiltration.hpp  ForceMain.cpp  ForceMain.hpp  HydStructures.cpp  HydStructures.hpp  Inlet.cpp  Inlet.hpp  KinematicWave.cpp  KinematicWave.hpp  Link.cpp  Link.hpp  Node.cpp  (+19 more)
src/legacy/: CMakeLists.txt
src/outfile/: CMakeLists.txt  errormanager.c  errormanager.h  messages.h  messages.txt  swmm_output.c
src/output/: CMakeLists.txt  swmm_output.c
src/plugin_sdk/: CMakeLists.txt
src/run/: CMakeLists.txt  main.c
src/solver/: CMakeLists.txt  climate.c  consts.h  controls.c  dwflow.c  error.h  findroot.c  findroot.h  flowrout.c  funcs.h  iface.c  inflow.c  inlet.c  input.c  landuse.c  lid.c  link.c  objects.h  output.c  project.hpp  qualrout.c  report.c  routing.c  runoff.c  subcatch.c  surfqual.c  swmm5.c  table.c  toposort.c
tests/: CMakeLists.txt  helper.h
tests/benchmarks/: CMakeLists.txt  README.md  bench_engine_vs_legacy.cpp  bench_hydraulics.cpp  bench_operator_snapshot.cpp  bench_timeseries_lookup.cpp  provenance-template.md
tests/outfile/: CMakeLists.txt  test_output.cpp
tests/regression/: CMakeLists.txt  test_regression_suite.cpp
tests/solver/: CMakeLists.txt  test_solver_hotstart.cpp
tests/unit/: CMakeLists.txt
(+540 files in other folders)
